--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ target/
 # Local development files
 modules/dev
 modules/ssp
-modules/12fl
+modules/linked_modules
 
 # Local build/test files
 siteapp/staticfiles
