in load_modules ensure there are no Jinja2 template syntax errors in introductions, output documents, and question prompts
see #91

--- a/fixtures/modules/account_settings_project.yaml
+++ b/fixtures/modules/account_settings_project.yaml
@@ -1,4 +1,5 @@
 id: account_settings_project
+type: system-project
 title: Account Settings Project
 short_description: The structure of the account settings Project.
 questions:
