--- a/modules/account_settings_project.yaml
+++ b/modules/account_settings_project.yaml
@@ -1,5 +1,6 @@
 id: account_settings_project
 title: Account Settings Project
+type: system-project
 short_description: The structure of the account settings Project.
 questions:
   - id: account_settings
