send notifications as emails
Use a long-running process and supervisord to keep it running.

--- a/deployment/supervisor.conf
+++ b/deployment/supervisor.conf
@@ -2,3 +2,8 @@
 command = uwsgi_python3 --socket /tmp/uwsgi.sock --wsgi-file siteapp/wsgi.py --chmod-socket=666
 directory = /home/site/q
 user = site
+
+[program:app-notificationemails]
+command = python3 manage.py send_notification_emails forever
+directory = /home/site/q
+user = site
