require stronger passwords and add a link to the password change form in the account settings task output document
See #208.

--- a/modules/account_settings.yaml
+++ b/modules/account_settings.yaml
@@ -87,3 +87,8 @@ output:
       ### Applications
 
       Chat: {{chat.text}}
+
+      ### Account Settings
+
+      [Change Your Password](/accounts/password/change/)
+      
