--- a/fixtures/modules/simple_project.yaml
+++ b/fixtures/modules/simple_project.yaml
@@ -34,3 +34,7 @@ questions:
     title: Test The Module Question Types
     type: module
     module-id: question_types_module
+  - id: question_types_encrypted
+    title: Test Encrypted Questions
+    type: module
+    module-id: question_types_encrypted
