freeze versions of python modules in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-Pillow
+Pillow==4.0.0
 CommonMark==0.6.4
-python-dateutil
-jinja2
-rtyaml
-email_validator
-cryptography
+python-dateutil==2.6.0
+Jinja2==2.9.4
+rtyaml==0.0.3
+email-validator==1.0.2
+cryptography==1.7.1
 
-git+https://github.com/JoshData/commonmark-py-plaintext
-git+https://github.com/if-then-fund/django-html-emailer
-git+https://github.com/if-then-fund/django-database-storage
-exclusiveprocess
+git+https://github.com/JoshData/commonmark-py-plaintext#egg=commonmark-to-text
+git+https://github.com/if-then-fund/django-html-emailer#egg=django-html-emailer
+git+https://github.com/if-then-fund/django-database-storage#egg=django-database-storage
 
+exclusiveprocess==0.9.3
 Django==1.10.4
-django-debug-toolbar
-django-allauth
-jsonfield
-django-bootstrap3
-django-notifications-hq
-
-graphviz
-
-selenium
+django-debug-toolbar==1.6
+django-allauth==0.30.0
+jsonfield==1.0.3
+django-bootstrap3==8.1.0
+django-notifications-hq==1.2
+graphviz==0.5.2
+selenium==3.0.2
