--- a/fixtures/modules/question_types_numeric.yaml
+++ b/fixtures/modules/question_types_numeric.yaml
@@ -9,16 +9,41 @@ questions:
     title: integer
     prompt: Enter a whole number.
     type: integer
-    # TODO: test min, max
     placeholder: 123
+    help: This is some help text.
+
+  - id: q_integer_minmax
+    title: integer min/max
+    prompt: Enter a whole number between 1 and 10
+    type: integer
+    min: 1
+    max: 10
+    placeholder: 1
+    help: This is some help text.
+
+  - id: q_integer_minmax_big
+    title: integer min/max big
+    prompt: Enter a whole number between 1 and 10000
+    type: integer
+    min: 1
+    max: 10000
+    placeholder: 1
     help: This is some help text.
 
   - id: q_real
     title: real
     prompt: Enter a fractional number.
     type: real
-    # TODO: test min, max
     placeholder: 123.456
+    help: This is some help text.
+
+  - id: q_real_minmax
+    title: real min/max
+    prompt: Enter a fractional number.
+    type: real
+    min: 1
+    max: 100
+    placeholder: 23.456
     help: This is some help text.
 
 output:
