abstract the way modules are loaded from disk so that we can later load them from other sources and not depend on run-time access to the local filesystem
* A Q deployment can now load module YAML files (and associated assets) from a list of arbitrary local paths defined in the environment JSON, rather than a fixed single path (which we ended up symlinking repos into).
* The `modules` directory at the root of this repo now defines required `system` modules in the `system` directory. They are mapped to the `system/...` modules namespace. Every Q deployment must include `"system": { "type": "local", "path": "modules/system" }` in its module repositories definition, or a folder of functionally equivalent modules.
* External Python code for `external-function` questions can now only see functions defined in a `.py` file named the same as the module YAML file. The Python source code is now stored in our database, so that it is version-tracked along with the YAML file, and so that we no longer use Python's `import` semantics to load external code.
* Module (Jinja2) templates can now access any globally defined value in a `.py` file named the same as the module YAML file (as with external-function questions). (This previously used a `external-functions` whitelist. Now any value defined in the Python module is accessible.)
* Private assets (in `private-assets`) are no longer accessible to module Python code, since this was too tricky to put into our database since they were not module-specific.
* Static assets are still copied into a public virtual path, which means they are not version tracked along with the YAML file. This should be changed so that old YAML files continue to be able to reference old assets.

--- a/fixtures/modules/other/question_types_media.yaml
+++ b/fixtures/modules/other/question_types_media.yaml
@@ -20,7 +20,7 @@ questions:
     title: external-function
     prompt: I'm going to run a Python function.
     type: external-function
-    function: siteapp.tests.sample_external_function
+    function: sample_external_function
 
 output:
   - title: Your Answers
