import modules through apps
* reorganize the system modules and fixtures into apps, with each app its own directory and the main project file for an app named app.yaml
* move the module-loading functions from load_modules to module_sources, called via App.import_into_database
* re-do the module source classes to be based on Pyfilesystem2 and create filesystem implementations based on the Github API and on the git command-line tool
* rework the module loading functions to work on one app at a time
* delete modules/inventory_org_details.yaml which didnt seem to be in use

--- a/fixtures/modules/system/account/app.yaml
+++ b/fixtures/modules/system/account/app.yaml
@@ -1,6 +1,6 @@
-id: account_settings_project
-title: Account Settings Project
+id: app
 type: system-project
+title: Account Settings Project
 short_description: The structure of the account settings Project.
 questions:
   - id: account_settings
