--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ html5lib==0.999999999 # MIT License
 CommonMark==0.7.3 # BSD License
 cryptography==1.8.1 # BSD License
 graphviz==0.6 # MIT License
+fs==2.0.3 # BSD License
 PyGithub==1.34 # LGPL License
 GitPython==2.1.3 # BSD License
 
