--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-allauth==0.31.0 # MIT License
 django-bootstrap3==8.2.2 # Apache License 2.0
 django-notifications-hq==1.2 # MIT License
 jsonfield==2.0.1 # MIT License
+dj_database_url==0.4.2 # BSD License
 
 # Python Packages Developed by Josh
 rtyaml==0.0.3 # CC0
