--- a/deployment/rhel/apache.conf
+++ b/deployment/rhel/apache.conf
@@ -1,3 +1,13 @@
+# Default HTTP redirect.
+<VirtualHost *:80>
+  ServerName q.govready.com
+  <IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule (.*) https://q.govready.com%{REQUEST_URI}
+  </IfModule>
+</VirtualHost>
+
+# HTTP redirect for q.govready.com and org subdomains.
 <VirtualHost *:80>
   ServerName q.govready.com
   ServerAlias *.q.govready.com
