add a default https vhost so that Django doesnt get requests from unrecgonized hosts, which it will reject with an error
Also fix the ServerAlias for the organization subdomains.

fixes #271

--- a/deployment/rhel/apache.conf
+++ b/deployment/rhel/apache.conf
@@ -7,6 +7,19 @@
   </IfModule>
 </VirtualHost>
 
+# Default HTTPS virtual host so that no Django backend gets
+# a request from an unrecognized host.
+<VirtualHost *:443>
+  SSLEngine on
+  SSLCertificateKeyFile /home/govready-q/ssl_certificate.key
+  SSLCertificateFile /home/govready-q/ssl_certificate.crt
+  SSLCertificateChainFile /home/govready-q/ssl_certificate.crt
+  <IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule (.*) https://q.govready.com%{REQUEST_URI}
+  </IfModule>
+</VirtualHost>
+
 # HTTP redirect for q.govready.com and org subdomains.
 <VirtualHost *:80>
   ServerName q.govready.com
@@ -20,7 +33,7 @@
 <VirtualHost *:443>
   # Recognize the q domain name and organization subdomains.
   ServerName q.govready.com
-  ServerAlias *.q.govready.com
+  ServerAlias *.govready.com
   UseCanonicalName Off
 
   # Enable HTTPS.
