--- a/deployment/rhel/apache.conf
+++ b/deployment/rhel/apache.conf
@@ -1,9 +1,10 @@
-# Default HTTP redirect.
+# HTTP redirect for q.govready.com and org subdomains.
 <VirtualHost *:80>
   ServerName q.govready.com
+  ServerAlias *.govready.com
   <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteRule (.*) https://q.govready.com%{REQUEST_URI}
+    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
   </IfModule>
 </VirtualHost>
 
@@ -17,16 +18,6 @@
   <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteRule (.*) https://q.govready.com%{REQUEST_URI}
-  </IfModule>
-</VirtualHost>
-
-# HTTP redirect for q.govready.com and org subdomains.
-<VirtualHost *:80>
-  ServerName q.govready.com
-  ServerAlias *.q.govready.com
-  <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
   </IfModule>
 </VirtualHost>
 
