fix circleci reference to the tests, I split the test class into two

--- a/circle.yml
+++ b/circle.yml
@@ -22,4 +22,5 @@ test:
   override:
     - ./manage.py test guidedmodules
     - ./manage.py test siteapp.tests.LandingSiteFunctionalTests
-    - ./manage.py test siteapp.tests.OrganizationSiteFunctionalTests
+    - ./manage.py test siteapp.tests.GeneralTests
+    - ./manage.py test siteapp.tests.QuestionsTests
