the account settings module was missing a hyphen causing either ops_team or sec_team to be missing from choices

--- a/modules/system/account/account_settings.yaml
+++ b/modules/system/account/account_settings.yaml
@@ -32,7 +32,7 @@ questions:
       - key: ops_team
         text: Operations Team
         help: System Administrator, Engineer, Operations Manager, Delivery Specialist, ...
-        key: sec_team
+      - key: sec_team
         text: Security Team
         help: Security Specialist, Architect, Security Manager, ...
       - key: comp_team
