--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@
 python-dateutil==2.6.0 # Simplified BSD License
 Pillow==4.1.0 # MIT-like License
 Jinja2==2.9.6 # BSD License
-selenium==3.3.3 # Apache License 2.0
-rfc5424-logging-handler==1.0.0 # BSD License
 
 # Less Common Python Packages
 html5lib==0.999999999 # MIT License
@@ -33,4 +31,8 @@ django-html-emailer==0.0.4 # MIT License
 django-database-storage-backend==0.0.2 # CC0
 commonmarkextensions==0.0.1 # BSD 3
 
+# Only needed in production
+rfc5424-logging-handler==1.0.0 # BSD License
+
 # Development & testing only
+selenium==3.3.3 # Apache License 2.0
