--- a/requirements.in
+++ b/requirements.in
@@ -4,7 +4,7 @@
 # Common Python Packages
 python-dateutil # Simplified BSD License
 Pillow # MIT-like License
-Jinja2==2.9.6 # BSD License
+Jinja2 # BSD License
 
 # Less Common Python Packages
 html5lib==0.999999999 # MIT License
