--- a/requirements.in
+++ b/requirements.in
@@ -26,7 +26,7 @@ jsonfield # MIT License
 dj_database_url==0.4.2 # BSD License
 
 # Python Packages Developed by GovReady and/or Josh
-mondrianish==0.5.1 # CC0
+mondrianish # CC0
 rtyaml # CC0
 email-validator # CC0
 exclusiveprocess # CC0
