--- a/requirements.in
+++ b/requirements.in
@@ -24,6 +24,7 @@ django-bootstrap3 # Apache License 2.0
 django-notifications-hq==1.3 # MIT License
 jsonfield # MIT License
 dj_database_url==0.4.2 # BSD License
+whitenoise # MIT License
 
 # Python Packages Developed by GovReady and/or Josh
 mondrianish # CC0
