--- a/deployment/rhel/apache.conf
+++ b/deployment/rhel/apache.conf
@@ -48,13 +48,12 @@
   # So we're just proxying using the HTTP protocol instead. See the uwsgi command-line flags.
 
   Alias /robots.txt /home/govready-q/public_html/static/robots.txt
-  Alias /favicon.ico /home/govready-q/public_html/static/favicon.ico
   Alias /static/ /home/govready-q/public_html/static/
 
   # ProxyPass takes precedence over Alias, so we have to exclude
   # the paths to static assets using a negative lookahead group
   # in the regular expression.
-  <LocationMatch ^/(?!static/|robots.txt|favicon.ico) >
+  <LocationMatch ^/(?!static/|robots.txt) >
     ProxyPass http://127.0.0.1:3031
     ProxyPreserveHost On
   </LocationMatch>
