--- a/requirements.in
+++ b/requirements.in
@@ -7,7 +7,7 @@ Pillow # MIT-like License
 Jinja2 # BSD License
 
 # Less Common Python Packages
-html5lib==0.999999999 # MIT License
+html5lib # MIT License
 CommonMark==0.7.4 # BSD License
 cryptography==2.1.4 # BSD License
 graphviz # MIT License
