--- a/Dockerfile.centos7
+++ b/Dockerfile.centos7
@@ -19,7 +19,7 @@ RUN python3.6 -m venv venv
 
 # Install required system packages.
 # jq: we use it to assemble the local/environment.json file
-RUN yum install -y graphviz unzip pandoc wkhtmltopdf jq libffi-devel
+RUN yum install -y graphviz unzip pandoc xorg-x11-server-Xvfb wkhtmltopdf jq libffi-devel
 
 # Copy in the Python module requirements and install them.
 # Manually install database drivers which aren't in our requirements
