--- a/requirements.txt
+++ b/requirements.txt
@@ -54,9 +54,9 @@ django-model-utils==3.1.1 \
     --hash=sha256:4356fad5f6fc9910da865fbf9371f9c2e028606dff2bbd8e32e67569260e530d \
     --hash=sha256:a9baa7de943b4e8afa61728ce8c42ce99e88cc87d40e74df2b060a78d22c0f5c \
     # via django-notifications-hq
-django-notifications-hq==1.3 \
-    --hash=sha256:29ce314f405bc03e642108ff55530db517e06e9b441439a368e053d539181270 \
-    --hash=sha256:e9b6bf9d62cb5b0058a162467380f6d9949e9f4206af9731c83f84014ccc4580
+https://github.com/phamk/django-notifications/archive/django-2.0.zip \
+    --hash=sha256:f46ef7b5702772adbd343f692eac4fc9712625cd6167c9bc927282ac98b66969
+    # see https://github.com/phamk/django-notifications/commit/652222d2b8b0ad9c23e61cf4880f85dc40d699d0
 django==1.10.8 \
     --hash=sha256:d4ef83bd326573c00972cb9429beb396d210341a636e4b816fc9b3f505c498bb \
     --hash=sha256:ffdc7e938391ae3c2ee8ff82e0b4444e4e6bb15c99d00770285233d42aaf33d6
