safety and liccheck versions were incompatible?
Running liccheck gave:

pip._vendor.pkg_resources.VersionConflict: (safety 1.7.0 (/home/ubuntu/virtualenvs/venv-3.5.2/lib/python3.5/site-packages), Requirement.parse('safety==1.6.1'))

--- a/requirements.in
+++ b/requirements.in
@@ -39,4 +39,4 @@ rfc5424-logging-handler # BSD License
 
 # Development & testing only
 selenium # Apache License 2.0
-safety==1.6.1 # MIT License
+safety # MIT License
