add a new management command for taking screenshots of starting a compliance app and answering its questions

--- a/requirements.in
+++ b/requirements.in
@@ -40,3 +40,4 @@ rfc5424-logging-handler # BSD License
 # Development & testing only
 selenium # Apache License 2.0
 safety # MIT License
+fpdf2 # LGPLv3
