CircleCI is bailing that requirements_txt_checker.sh can't install global packages (permission denied) although they should already be installed by .circleci/config.yaml, but since they are already installed I am just removing the install step here

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,8 @@ jobs:
     #    name: Running X virtual framebuffer
     #    command: Xvfb :99 -screen 0 1280x1024x24
     #    background: true
+
+    # Install packages necesary for requirements_txt_checker.sh.
     - run: sudo pip3 install -U pip-tools liccheck safety
 
     # Run tests.
