move psycopg2 into requirements.in/txt
We had separated our this dependency because it is only needed in production
deployments with a PostgreSQL database. But we were installing it without
hash checks. Moving it into requirements.txt is more secure since pip will
check the download's hash.

--- a/requirements.in
+++ b/requirements.in
@@ -34,7 +34,8 @@ django-html-emailer # MIT License
 django-database-storage-backend==0.0.4 # CC0, requires libmagic (libmagic1 in Debian)
 commonmarkextensions # BSD 3
 
-# Only needed in production
+# Only needed in common production deployment configurations
+psycopg2 # LGPL
 rfc5424-logging-handler # BSD License
 
 # Development & testing only
