--- a/requirements.in
+++ b/requirements.in
@@ -22,7 +22,7 @@ django-allauth # MIT License
 django-bootstrap3 # Apache License 2.0
 django-notifications-hq==1.3 # MIT License -- see requirements_txt_updater.sh that has a patch to use a Github release
 jsonfield # MIT License
-dj_database_url==0.4.2 # BSD License
+dj_database_url # BSD License
 whitenoise # MIT License
 
 # Python Packages Developed by GovReady and/or Josh
