--- a/requirements.in
+++ b/requirements.in
@@ -39,6 +39,7 @@ psycopg2 # LGPL
 rfc5424-logging-handler # BSD License
 
 # Development & testing only
+coverage # Apache License 2.0
 selenium # Apache License 2.0
 safety # MIT License
 fpdf2 # LGPLv3
