rhel deployment: enable notification email process, don't know why it was disabled

--- a/deployment/rhel/supervisor.ini
+++ b/deployment/rhel/supervisor.ini
@@ -1,9 +1,9 @@
-[program:app-uwsgi]
+[program:govready-q-uwsgi]
 command = /home/govready-q/.local/bin/uwsgi --wsgi-file siteapp/wsgi.py --http-socket :3031
 directory = /home/govready-q/govready-q
 user = govready-q
 
-#[program:app-notificationemails]
-#command = python3.4 manage.py send_notification_emails forever
-#directory = /home/govready-q/govready-q
-#user = govready-q
+[program:govready-q-notificationemails]
+command = python3.4 manage.py send_notification_emails forever
+directory = /home/govready-q/govready-q
+user = govready-q
