--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ beautifulsoup4==4.6.0 \
 certifi==2018.1.18 \
     --hash=sha256:14131608ad2fd56836d33a71ee60fa1c82bc9d2c8d98b7bdbc631fe1b3cd1296 \
     --hash=sha256:edbc3f203427eef571f79a7692bb160a2b0f7ccaa31953e99bd17e307cf63f7d \
-    # via pipenv, requests
+    # via requests
 chardet==3.0.4 \
     --hash=sha256:84ab92ed1c4d4f16916e05906b6b75a6c0fb5db821cc65e70cbd64a3e2a5eaae \
     --hash=sha256:fc323ffcaeaed0e0a02bf4d117757b98aed530d9ed4531e3e15460124c106691 \
@@ -96,9 +96,9 @@ dnspython==1.15.0 \
     --hash=sha256:40f563e1f7a7b80dc5a4e76ad75c23da53d62f1e15e6e517293b04e1f84ead7c \
     --hash=sha256:861e6e58faa730f9845aaaa9c6c832851fbf89382ac52915a51f89c71accdd31 \
     # via email-validator
-dparse==0.3.0 \
-    --hash=sha256:6f5706703d09ea5db102f6fdef1d0fe7cda64f65cd84ee3a284fea9cdad6706b \
-    --hash=sha256:88b9ef0d2b7406c420f1ace86ce9b0a605c089e03c83474d9f6fc36146aa8e85 \
+dparse==0.4.1 \
+    --hash=sha256:00a5fdfa900629e5159bf3600d44905b333f4059a3366f28e0dbd13eeab17b19 \
+    --hash=sha256:cef95156fa0adedaf042cd42f9990974bec76f25dfeca4dc01f381a243d5aa5b \
     # via safety
 email-validator==1.0.3 \
     --hash=sha256:ddc4b5b59fa699bb10127adcf7ad4de78fde4ec539a072b104b8bb16da666ae5
@@ -183,9 +183,6 @@ pillow==5.1.0 \
     --hash=sha256:f5f302db65e2e0ae96e26670818157640d3ca83a3054c290eff3631598dcf819 \
     --hash=sha256:f7634d534662bbb08976db801ba27a112aee23e597eeaf09267b4575341e45bf \
     --hash=sha256:fe6931db24716a0845bd8c8915bd096b77c2a7043e6fc59ae9ca364fe816f08b
-pipenv==11.9.0 \
-    --hash=sha256:7b3c52fb57e17ca61b6141b75c8f5ba61a95c713ca470754240f7f1dbd0a4968 \
-    # via dparse
 psycopg2==2.7.4 \
     --hash=sha256:027ae518d0e3b8fff41990e598bc7774c3d08a3a20e9ecc0b59fb2aaaf152f7f \
     --hash=sha256:092a80da1b052a181b6e6c765849c9b32d46c5dac3b81bf8c9b83e697f3cdbe8 \
@@ -265,9 +262,9 @@ rfc5424-logging-handler==1.1.2 \
     --hash=sha256:a78a0a42b19e44215cd8a5be4ab42bfd3593c0c30a9cbfde9478e398f502ea00
 rtyaml==0.0.4 \
     --hash=sha256:a49c65d65944560a6ae9c746e53d6ce68206d390bf5fa53d0a2510f34cd0d2f1
-safety==1.7.0 \
-    --hash=sha256:9fb74211a0a0ab09541fe894293d66a558b6138a9fe8ebabc8cf56670e8a009c \
-    --hash=sha256:ff0c4b76ad791d33825e36c41671ea45330d438921e5395903c0e87e576a377a
+safety==1.8.1 \
+    --hash=sha256:0bd2a26b872668767c6db8efecfc8869b547463bedff5e7cd7b52f037aa6f200 \
+    --hash=sha256:fc3fc55656f1c909d65311b49a38211c42c937f57a05393289fb3f17cadfa4a1
 selenium==3.11.0 \
     --hash=sha256:2b6f018e55f50e9c67a67caec2f73f806f72c162fb38cf3ea79e0a8f6506bf56 \
     --hash=sha256:5841fb30c3965866220c34d16de8e3d091e2833fcac385160a63db0c3522a297
@@ -294,14 +291,6 @@ urllib3==1.22 \
     --hash=sha256:06330f386d6e4b195fbfc736b297f58c5a892e4440e54d294d7004e3a9bbea1b \
     --hash=sha256:cc44da8e1145637334317feebd728bd869a35285b93cbb4cca2577da7e62db4f \
     # via requests
-virtualenv-clone==0.3.0 \
-    --hash=sha256:4507071d81013fd03ea9930ec26bc8648b997927a11fa80e8ee81198b57e0ac7 \
-    --hash=sha256:b5cfe535d14dc68dfc1d1bb4ac1209ea28235b91156e2bba8e250d291c3fb4f8 \
-    # via pipenv
-virtualenv==15.2.0 \
-    --hash=sha256:1d7e241b431e7afce47e77f8843a276f652699d1fa4f93b9d8ce0076fd7b0b54 \
-    --hash=sha256:e8e05d4714a1c51a2f5921e62f547fcb0f713ebbe959e0a7f585cc8bef71d11f \
-    # via pipenv
 webencodings==0.5.1 \
     --hash=sha256:a0af1213f3c2226497a97e2b3aa01a7e4bee4f403f95be16fc9acd2947514a78 \
     --hash=sha256:b36a1c245f2d304965eb4e0a82848379241dc04b865afcc4aab16748587e1923 \
