docker: use uWSGI as the HTTP+application server instead of `manage.py runserver`
runserver is not meant for production environments. uWSGI is the simplest production-grade replacement.

uWSGI is started with four worker processes, so our docker image now supports concurrent connections.

--- a/requirements.in
+++ b/requirements.in
@@ -35,6 +35,7 @@ django-database-storage-backend # CC0, requires libmagic (libmagic1 in Debian)
 commonmarkextensions # BSD 3
 
 # Only needed in common production deployment configurations
+uwsgi # GPL2
 psycopg2 # LGPL
 rfc5424-logging-handler # BSD License
 
