drop dependency software license checks which break with pip 10
liccheck relied on an unsupported function in pip that was renamed in pip 10

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 
     # Install packages necesary for requirements_txt_checker.sh,
     # and then run it.
-    - run: pip3 install --user -U pip-tools liccheck safety
+    - run: pip3 install --user -U pip-tools safety
     - run: ./requirements_txt_checker.sh
 
     # Run static code analysis using 'bandit'.
