move mysqlclient dependency from Dockerfile to requirements.in
see e20dada74cdef901f4508717f6df7ed063722598

--- a/requirements.in
+++ b/requirements.in
@@ -37,6 +37,7 @@ commonmarkextensions # BSD 3
 # Only needed in common production deployment configurations
 uwsgi # GPL2
 psycopg2 # LGPL
+mysqlclient # GPL
 rfc5424-logging-handler # BSD License
 
 # Development & testing only
