--- a/requirements.in
+++ b/requirements.in
@@ -45,4 +45,7 @@ bandit # Apache License 2.0
 coverage # Apache License 2.0
 selenium # Apache License 2.0
 safety # MIT License
-fpdf2 # LGPLv3+
+fpdf2 # LGPLv3+	
+
+# Documentation only
+m2r # MIT License
