--- a/deployment/rhel/apache.conf
+++ b/deployment/rhel/apache.conf
@@ -56,6 +56,7 @@
   <LocationMatch ^/(?!static/|robots.txt) >
     ProxyPass http://127.0.0.1:3031
     ProxyPreserveHost On
+    RequestHeader set X-Forwarded-Proto "https"
   </LocationMatch>
 
 </VirtualHost>
